Implement auth (user signup and login) APIs
- Configured database connection (used Postgres and TypeORM)
- Refined project stucture
- (docs): Added basic README.md file
- Configured Dependency injection using Inversify
- Configured logging using Winston
